--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 			for (let i = 0; i < checked.length; i++) {
 				arr.push(checked[i].value);
 			}
-			for	(let i = 0; i < checked.length; i++) {
-				if (i < 6 && checked[i].checked) {
+			for	(let i = 0; i < checkboxes.length; i++) {
+				if (i < 6 && checkboxes[i].checked) {
 					alert("Warning!\nYou are going to work at night!");
 					break;
 				}
